<resources>
    <string name="app_name">AllTalk</string>

    <!--  custom names for BienvenidaActivity  -->
    <string name="boton_iniciar">Iniciemos</string>
    <string name="texto_crear_cuenta">¿Aún no tiene una cuenta?</string>
    <string name="boton_crear_cuenta">Crear cuenta</string>

    <!--  custom names for AutenticacionActivity  -->
    <string name="texto_bienvenida">Bienvenido a AllTalk</string>
    <string name="texto_usuario">Usuario</string>
    <string name="texto_password">Contraseña</string>
    <string name="boton_autenticacion">Iniciar sesión</string>
    <string name="boton_registrarse">Registrarse</string>

    <!--  custom names for HomeFragment  -->
    <string name="texto_titulo_app">Traductor de señas</string>
    <string name="texto_descripcion_app">Escoja una opción para iniciar</string>
    <string name="texto_ir_a_traductor">Ir al traductor se señas</string>
    <string name="texto_ir_a_clase">Ir al diccionario de señas</string>

    <!--  custom names for header_view  -->
    <string name="valor_usuario">PE72865852</string>

    <!--  custom names for menu_nav  -->
    <string name="home_nav">Inicio</string>
    <string name="perfil_nav">Perfil</string>
    <string name="configuracion_nav">Configuración</string>
    <string name="sobre_nosotros_nav">Sobre nosotros</string>
    <string name="cerrar_sesion_nav">Cerrar sesión</string>

    <!--  descripción de imágenes  -->
    <string name="img_fondo_pantalla">Fondo de pantalla de bienvenida</string>
    <string name="img_logotipo">Logotipo del aplicativo móvil</string>
    <string name="img_perfil">Foto de perfil del usuario</string>

    <!--  default descriptions  -->
    <string name="custom_message">Mensaje personalizado</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>