<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_nav"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home_nav" />

        <item
            android:id="@+id/perfil_nav"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/perfil_nav" />

        <item
            android:id="@+id/configuracion_nav"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/configuracion_nav" />

        <item
            android:id="@+id/sobre_nosotros_nav"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/sobre_nosotros_nav" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/cerrar_sesion_nav"
                android:icon="@drawable/baseline_power_settings_new_24"
                android:title="@string/cerrar_sesion_nav" />
        </menu>
    </item>

</menu>