<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_200"
    android:orientation="vertical"
    tools:context=".ui.registrar.RegistrarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fondo_pantalla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_fondo_pantalla"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fondo_mascara" />

        <ImageView
            android:id="@+id/logotipo"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fondo_pantalla"
            app:srcCompat="@drawable/logotipo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/formulario_autenticacion"
            android:layout_width="350dp"
            android:layout_height="420dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="135dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/fondo_pantalla"
            app:layout_constraintEnd_toEndOf="@+id/fondo_pantalla"
            app:layout_constraintStart_toStartOf="@+id/fondo_pantalla">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/texto_bienvenida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/texto_usuario"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="130dp"
                android:autofillHints="username"
                android:backgroundTint="@color/gray"
                android:ellipsize="end"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/texto_usuario"
                android:inputType="textPersonName"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/texto_password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="220dp"
                android:autofillHints="password"
                android:backgroundTint="@color/gray"
                android:ellipsize="end"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:hint="@string/texto_password"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="17sp" />

            <Button
                android:id="@+id/boton_registrarse"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="320dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/boton_registrarse"
                android:textSize="17sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>