<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <RelativeLayout
            android:id="@+id/information_card"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/corners_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/foto_perfil"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/img_perfil"
                android:src="@drawable/foto_perfil" />

            <TextView
                android:id="@+id/valor_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:layout_toEndOf="@id/foto_perfil"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/valor_usuario"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/texto_titulo_app"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/information_card" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/texto_descripcion_app"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/boton_traductor"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:background="@color/yellow">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="18dp"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/texto_ir_a_traductor"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/texto_ir_a_traductor"
                        android:src="@drawable/baseline_camera_alt_24" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <RelativeLayout
                    android:id="@+id/boton_diccionario"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:background="@color/green">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="18dp"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/texto_ir_a_clase"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/texto_ir_a_clase"
                        android:src="@drawable/baseline_laptop_chromebook_24" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>